cargo-features = ["profile-rustflags"]

[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
rustflags = ["-C", "target-cpu=native"]

[profile.bench]
lto = true
rustflags = ["-C", "target-cpu=native"]

[dependencies]
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.12.0"
nom = "7.1"
num = "0.4.1"
paste = "1.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false
